modify the index page

--- a/style.css
+++ b/style.css
@@ -903,7 +903,7 @@
   
   /* CTA Section */
   .cta {
-    background: url('https://via.placeholder.com/1920x600') center/cover no-repeat;
+    background: url('https://img.freepik.com/free-vector/realistic-neon-lights-background_23-2148935560.jpg?uid=R180801392&ga=GA1.1.1285227054.1735319231&semt=ais_hybrid&w=740') center/cover no-repeat;
     position: relative;
     color: white;
     text-align: center;
